; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_wrappers.c_audit_write_success_self.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_wrappers.c_audit_write_success_self.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"audit_write_success_self()\00", align 1
@LOG_ERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"%s: au_to_me() failed\00", align 1
@kAUMakeSubjectTokErr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @audit_write_success_self(i16 signext %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i16, align 2
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i16 %0, i16* %4, align 2
  store i32* %1, i32** %5, align 8
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %8 = call i32* (...) @au_to_me()
  store i32* %8, i32** %6, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* @LOG_ERR, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @syslog(i32 %11, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %12)
  %14 = load i32, i32* @kAUMakeSubjectTokErr, align 4
  store i32 %14, i32* %3, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load i16, i16* %4, align 2
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @audit_write(i16 signext %16, i32* %17, i32* %18, i32 0, i32 0)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %15, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32* @au_to_me(...) #1

declare dso_local i32 @syslog(i32, i8*, i8*) #1

declare dso_local i32 @audit_write(i16 signext, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
